# reeltime

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.example.yaml  docker-compose.director.yml  docker-compose.yml  package.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  ghcr.yml
actor/: README.md  package-lock.json
boom/: .dockerignore  .env.example  Dockerfile  README.md  package-lock.json  package.json
boom/src/: streamer.js
director/: Dockerfile  README.md  director.config.example.yaml  package-lock.json  package.json
director/src/: director.js  director.test.js
mixer/: .env.example  Dockerfile  README.md  package-lock.json  package.json
mixer/src/: streamer.js  streamer.test.js
reel/: .dockerignore  Dockerfile  README.md  config.example.yaml  package.json
reel/src/: streamer.js
scout/: .env.example  Dockerfile  README.md  package-lock.json  package.json
scout/src/: streamer.js
shared/: utils.js
src/: streamer.js  utils.js
tools/: tv-show-query.js  tv-show-query.test.js
tools/archive-org-import/: README.md  archive_to_config.js  import_archive_range.sh
tools/convert-audio/: README.md  convert_audio.sh
tools/convert-mkv/: README.md  convert_mkv.sh
usher/: .gitignore  README.md  config.yaml  install.sh  pyproject.toml  requirements.txt  usher.service
usher/usher/: __init__.py  __main__.py  config.py  controller.py  director.py  ir.py  keyboard.py  overlay.py  streamer.py
ws4channels/: .env.example  Dockerfile  README.md  package-lock.json  package.json
(+9 files in other folders)
