[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "usher"
version = "0.1.0"
description = "IR remote control for the movie stack"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
linux = ["evdev>=1.6.0"]

[project.scripts]
usher = "usher.__main__:main"
